collapse fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -727,7 +727,6 @@ main{
         letter-spacing: 1px;
         position: static;
         overflow: hidden;
-        max-height: 800px;
         opacity: 1;
         transform: translate(0, 0);
         margin-top: 14px;
